flexonline.com (archived on 2010-08-21)
{
  "alexa_rank": 26362,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 10236,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.06,
  "homepage_snapshot_redirected_domain": "flexonline.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101007142805id_/http://www.flexonline.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101007142805id_/http%3A//flexonline.com",
  "interval": "2010_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "flexonline.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100821085914id_/http%3A//www.flexonline.com/privacy",
  "policy_title": "Privacy Policy - Flex Online",
  "policy_url": "flexonline.com/privacy",
  "sha1": "93d796eb50d72df0caffcf1512fa82c9023844fb",
  "simhash": 9876266181809016738,
  "simhash_updated": false,
  "site_hostname": "flexonline.com",
  "site_url": "http://flexonline.com",
  "smog": 14.7,
  "strict_updated": false,
  "timestamp": "20100821085914",
  "word_count": 1686,
  "year": 2010
}

--- a/f/fl/fle/flexonline.com.html
+++ b/f/fl/fle/flexonline.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the flexonline.com privacy policy that was archived on 2010-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100621132707id_/http%3A//www.flexonline.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flexonline.com privacy policy that was archived on 2010-08-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100821085914id_/http%3A//www.flexonline.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head style="">
 		<link rel="icon" type="image/png" href="http://www.flexonline.com/2007/flex.png">
@@ -44,80 +44,67 @@
 	<link rel="stylesheet" type="text/css" href="/2007/css/simple.css">
 </head>
 <body>
-	<div id="register_box" style="display:none;"></div>
-<div id="header">
+	<div id="header">
 	<div id="business_nav">
-		<a href="/">Home</a>
-		|
-		<a href="/sitemap/">Sitemap</a>
-		|
-		<a href="/contact/">Contact Us</a>
-		|
-		<a href="https://w1.buysub.com/loc/FLX/headlink" target="_blank">Subscribe</a>
-		|
-		<span id="login"><a href="javascript:;" onclick="ajax_popup('http://boards.flexonline.com/phpBB2/templates/flex/simple_registration.php','register_box')">Sign-Up</a> 
-		|
-		<a href="http://boards.flexonline.com/phpBB2/login.php">Log In</a> </span>
+		<a href="/">Home</a> |
+		<a href="/sitemap/">Sitemap</a>	|
+		<a href="/contact/">Contact Us</a> |
+		<a href="https://w1.buysub.com/loc/FLX/headlink" target="_blank">Subscribe</a> |
+		<span id="login">
+		<a href="http://boards.flexonline.com/phpBB2/profile.php?mode=register" onclick="ajax_popup('http://boards.flexonline.com/phpBB2/templates/flex/simple_registration.php'); return false;">Sign-Up</a> |
+		<a href="http://boards.flexonline.com/phpBB2/login.php" onclick="ajax_popup('http://boards.flexonline.com/phpBB2/templates/flex/simple_login.html'); return false;">Log In</a>
+		</span>
 		
 		<script type="text/javascript">loggedin('phpbb2_loggedin','login');</script>
 	</div>
 	
-	<table cellspacing="0" cellpadding="0" border="0" width="930">
-		<tbody><tr>
-			<td width="202">
-				<a href="/"><img id="logo" src="/2007/images/logo.png" alt="Flex Online" height="70" width="191"></a>
-			</td>
-			<td width="728">
-				<div class="ad728x90"><!-- begin ad tag (tile=1) -->
+	<a href="/" id="logo"></a>
+	<div class="ad728x90" style="float:right;margin-bottom:0px;"><!-- begin ad tag (tile=1) -->
 <script type="text/javascript">// <![CDATA[ 
 var ord=Math.random()*10000000000000000;
-document.write('<script language="JavaScript" src="http://ad.doubleclick.net/adj/ami.flex.other/;sz=728x90;tile=1;ord=' + ord + '?"  type="text/javascript"><\/script>');
-// ]]> </script><script language="JavaScript" src="http://ad.doubleclick.net/adj/ami.flex.other/;sz=728x90;tile=1;ord=7606576076241265?" type="text/javascript"></script><noscript><a href="http://ad.doubleclick.net/jump/ami.flex.other//;sz=728x90;tile=1;ord=123456789?" target="_blank"><img src="http://ad.doubleclick.net/ad/ami.flex.other//;sz=728x90;tile=1;ord=123456789?" width="728" height="90" border="0" alt="" /></a></noscript>
+document.write('<script language="JavaScript" src="http://ad.doubleclick.net/adj/ami.flex.other/;sz=728x90;tile=1;article=1;ord=' + ord + '?"  type="text/javascript"><\/script>');
+// ]]> </script><script language="JavaScript" src="http://ad.doubleclick.net/adj/ami.flex.other/;sz=728x90;tile=1;article=1;ord=1344350447778326.2?" type="text/javascript"></script><noscript><a href="http://ad.doubleclick.net/jump/ami.flex.other/;sz=728x90;tile=1;article=1;ord=123456789?" target="_blank"><img src="http://ad.doubleclick.net/ad/ami.flex.other/;sz=728x90;tile=1;article=1;ord=123456789?" width="728" height="90" border="0" alt="" /></a></noscript>
 <!-- End ad tag -->
 </div>
-			</td>
-		</tr>
-	</tbody></table>
-	
-	<div id="qm0" class="qmmc" style="zoom: 1; z-index: 11;">
+		
+	<div id="qm0" class="qmmc clear" style="zoom: 1; z-index: 11;">
 		<img src="/2007/images/menu_left.png" alt="" border="0" height="31" width="6">
+		
 		<a href="/" class="home" style="background-position: -1px 0;">Home</a>
-		<a href="/news" class="news">News</a>
-		<a href="/training" class="training">Training</a>
+		<a href="/news/" class="news">News</a>
+		<a href="/training/" class="training">Training</a>		
+		<a href="/nutrition/" class="nutrition">Nutrition</a>		
+		<a href="/blog/" class="flexBlog">Flex Blog</a>
+		<a href="/gallery/" class="galleries qmparent">Galleries</a>
 		
-		<a href="/nutrition" class="nutrition">Nutrition</a>
-		
-		<a href="/blog" class="flexBlog">Flex Blog</a>
-		<a href="/gallery" class="galleries qmparent">Galleries</a>
 		<div class="galleries" style="z-index: 21;">
 				<img src="/2007/images/submenu_left.png" alt="" border="0" height="28" width="1">
 				<a href="http://contests.flexonline.com/">Contests</a>
 			
 				<img src="/2007/images/submenu_left.png" alt="" border="0" height="28" width="1">
-				<a href="/gallery/men/60">Men</a>
+				<a href="/gallery/men/60/">Men</a>
 			
 			
 				<img src="/2007/images/submenu_left.png" alt="" border="0" height="28" width="1">
-				<a href="/gallery/women/73">Women</a>
+				<a href="/gallery/women/73/">Women</a>
 			
 		</div>
 
 		<a href="/videos/" class="videos">Videos</a>
-		<!--<a href="/videos/120" class="videos">Videos</a>-->
 		<a href="/forums/" class="forums">Forums</a>
-		<a href="/newsletter/" class="newsletter">Newsletter</a>
+		<a href="http://boards.flexonline.com/phpBB2/profile.php?mode=register" class="newsletter">Newsletter</a>
 		<a href="https://w1.buysub.com/loc/FLX/sub_navbar" class="subscribe">Subscribe</a>
 		<img src="/2007/images/menu_right.png" alt="" border="0" height="31" width="6">
 		
 		<span class="qmclear">&nbsp;</span>
 	</div>
 	<script type="text/javascript">
-		<!--
+		//<!--
 		qm_create(0, false, 0, 300, false);
-		-->
+		//-->
 	</script>
 	
-	<div class="clear"><!-- --></div>
+	<div class="clear"></div>
 </div>
 
 	
@@ -214,7 +201,7 @@ The Internet is an evolving medium. Accordingly, WIN reserves the right to chang
 				<div class="subscribe narrow">
 	<a href="/newsstand/">
 		
-			<img src="/media/originals/fl_july_2010.jpg" align="middle" alt="cover" width="130">
+			<img src="/media/originals/flx_cvr.jpg" align="middle" alt="cover" width="130">
 		
 	</a>
 	
@@ -240,8 +227,8 @@ The Internet is an evolving medium. Accordingly, WIN reserves the right to chang
 
 				<div class="ad160x600"><!-- begin ad tag (tile=2) -->
 <script type="text/javascript">// <![CDATA[ 
-document.write('<script language="JavaScript" src="http://ad.doubleclick.net/adj/ami.flex.other/;sz=160x600;tile=2;ord=' + ord + '?"  type="text/javascript"><\/script>');
-// ]]> </script><script language="JavaScript" src="http://ad.doubleclick.net/adj/ami.flex.other/;sz=160x600;tile=2;ord=7606576076241265?" type="text/javascript"></script><noscript><a href="http://ad.doubleclick.net/jump/ami.flex.other//;sz=160x600;tile=2;ord=123456789?" target="_blank"><img src="http://ad.doubleclick.net/ad/ami.flex.other//;sz=160x600;tile=2;ord=123456789?" width="160" height="600" border="0" alt="" /></a></noscript>
+document.write('<script language="JavaScript" src="http://ad.doubleclick.net/adj/ami.flex.other/;sz=160x600;tile=2;article=1;ord=' + ord + '?"  type="text/javascript"><\/script>');
+// ]]> </script><script language="JavaScript" src="http://ad.doubleclick.net/adj/ami.flex.other/;sz=160x600;tile=2;article=1;ord=1344350447778326.2?" type="text/javascript"></script><noscript><a href="http://ad.doubleclick.net/jump/ami.flex.other/;sz=160x600;tile=2;article=1;ord=123456789?" target="_blank"><img src="http://ad.doubleclick.net/ad/ami.flex.other/;sz=160x600;tile=2;article=1;ord=123456789?" width="160" height="600" border="0" alt="" /></a></noscript>
 <!-- End ad tag -->
 </div>
 			</td>
@@ -267,7 +254,7 @@ document.write('<script language="JavaScript" src="http://ad.doubleclick.net/adj
 		<ul>
 			<li><a href="/about_us/">About Us</a></li>
 			<li><a href="/contact/">Contact Us</a></li>
-			<li><a href="http://www.americanmediainc.com/mediakits/flex/kit_online.htm">Advertising</a></li>
+			<li><a href="http://www.americanmediainc.com/brand/flex">Advertising</a></li>
 			<li><a href="/privacy/">Privacy</a></li>
 			<li><a href="https://w1.buysub.com/loc/FLX/footer_sub" target="_blank">Subscribe</a></li>
 			<li><a href="/subscribe/services/" target="_blank">Customer Service</a></li>
