nybg.org (archived on 2010-08-21)
{
  "alexa_rank": 183376,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 8079,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.21,
  "homepage_snapshot_redirected_domain": "nybg.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20101006185606id_/http://www.nybg.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20101006185606id_/http%3A//nybg.org",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "nybg.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100821102953id_/http%3A//www.nybg.org/about/privacy.php",
  "policy_title": "NYBG | Privacy Policy",
  "policy_url": "nybg.org/about/privacy.php",
  "sha1": "3303e0f2144e412f60166af57118069280d85d40",
  "simhash": 10349863418365415119,
  "simhash_updated": false,
  "site_hostname": "nybg.org",
  "site_url": "http://nybg.org",
  "smog": 16.61,
  "strict_updated": false,
  "timestamp": "20100821102953",
  "word_count": 1302,
  "year": 2010
}

--- a/n/ny/nyb/nybg.org.html
+++ b/n/ny/nyb/nybg.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nybg.org privacy policy that was archived on 2010-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100612190718id_/http%3A//www.nybg.org/about/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nybg.org privacy policy that was archived on 2010-08-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100821102953id_/http%3A//www.nybg.org/about/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<title>NYBG | Privacy Policy</title>
@@ -30,10 +30,13 @@
 					<li><p>YouTube</p><a href="http://www.youtube.com/user/tskoda"><img alt="NYBG on Youtube" src="/images/chrome/social/youtube.png"></a></li>
 				</ul>
 				<div id="mail-signup">
-					<form action="/email_signup/email_close.php" name="duh" method="post" target="_blank">
-						<input name="sub_id" type="hidden" value="attr_287697">
-						<input title="E-mail Address" id="signup-email" name="email_addr"><input type="image" alt="Signup for E-mails" src="/images/chrome/email-submit.png" id="email-submit">
-					</form>
+<form action="http://nybg.convio.net/site/Survey" name="duh" method="post" target="_blank">
+<input type="hidden" name="cons_info_component" id="cons_info_component" value="t">
+<input type="text" name="cons_email" id="cons_email" value="">
+<input type="hidden" name="denySubmit" id="denySubmit" value="">
+<input type="hidden" name="SURVEY_ID" id="SURVEY_ID" value="1241">
+<input type="image" alt="Signup for E-mails" src="/images/chrome/email-submit.png" id="ACTION_SUBMIT_SURVEY_RESPONSE" name="ACTION_SUBMIT_SURVEY_RESPONSE">
+</form>
 				</div>
 				<ul id="main-nav">
 					<!-- BEGIN MAIN NAV -->
@@ -82,7 +85,7 @@
 			<div id="content">
 					<!-- BEGIN LEFT NAV -->
 					<ul id="left-nav">
-				<li></li><li><a href="/about/" class="orangeLink">About the Garden</a><br></li><li><a href="/about/mission_and_history.php" class="orangeLink">Mission and History</a><br></li><li><a href="/about/grounds_and_gardens.php" class="orangeLink">Grounds and Gardens</a><br></li><li><a href="/about/scientific_research.php" class="orangeLink">Scientific Research</a><br></li><li><a href="/about/education.php" class="orangeLink">Education</a><br></li><li><a href="/about/exhibitions.php" class="orangeLink">Exhibitions</a><br></li><li><a href="/about/plan.php" class="orangeLink">A New Strategic Plan</a><br></li><li><a href="/about/web_credits.php" class="orangeLink"> Web Site Credits</a><br></li><li><a href="/media/" class="orangeLink">Press Room</a><br></li><li><a href="/media/institutional_info.php" class="orangeLink">Institutional Information</a><br></li><li><a href="/employment/" class="orangeLink">Employment</a><br></li></ul>
+				<li></li><li><a href="/about/" class="orangeLink">About the Garden</a><br></li><li><a href="/about/mission_and_history.php" class="orangeLink">Mission and History</a><br></li><li><a href="/about/grounds_and_gardens.php" class="orangeLink">Grounds and Gardens</a><br></li><li><a href="/about/scientific_research.php" class="orangeLink">Scientific Research</a><br></li><li><a href="/about/education.php" class="orangeLink">Education</a><br></li><li><a href="/about/exhibitions.php" class="orangeLink">Exhibitions</a><br></li><li><a href="/about/plan.php" class="orangeLink">A New Strategic Plan</a><br></li><li><a href="/employment/" class="orangeLink">Employment</a><br></li><li><a href="/about/web_credits.php" class="orangeLink"> Web Site Credits</a><br></li><li><br></li><li><a href="/media/" class="orangeLink">Press Room</a><br></li><li><a href="/media/institutional_info.php" class="orangeLink">Institutional Information</a><br></li></ul>
 
 					<!-- END LEFT NAV -->
 					<div id="main-content">
