--- a/e/ec/eco/ecomom.com.html
+++ b/e/ec/eco/ecomom.com.html
@@ -1,24 +1,35 @@
-<!--The following is the downloaded HTML source of the ecomom.com privacy policy that was archived on 2010-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100607215224id_/http%3A//store.ecomom.com/terms_privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ecomom.com privacy policy that was archived on 2010-08-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100821103838id_/http%3A//store.ecomom.com/terms_privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <meta name="Description" content="EcoMom.com is the destination for parents looking to find and buy healthy, sustainable, products for their babies and family, without having to break their budgets.">
 <meta name="Keywords" content="Organic, Green, Baby Food, Baby Bottles, Sustainable, Earth's Best, Diapers, Nature BabyCare, Green Toys, Books">
-<title>Organic Baby Food | Natural Baby Food | Eco-friendly Baby Care Products - EcoMom</title>
+<title>Terms: Privacy</title>
 <meta name="robots" content="index,follow">
 <meta name="GOOGLEBOT" content="INDEX, FOLLOW">
+
+<script type="text/javascript" src="/a/j/soft_add.js"></script>
+<script type="text/javascript" src="/a/j/sendAjax.js"></script>
+<link type="text/css" rel="stylesheet" href="/a/c/soft_add.css">
 
 <script type="text/javascript" src="/a/j/javascripts.js"></script>
 
 
 <meta name="google-site-verification" content="sAxk7qsuLLfy2F6wZI_j06dPau9Bca5LncNOQel5Sds">
 <meta name="verify-v1" content="CZk8UnS5tK1dJ2I++YbMHvqN5JhBmkoq1MXw44slERM=">
+<meta name="format-detection" content="telephone=no">
+
 <title>Untitled Document</title>
 <!-- DYNAMIC PAGE-SPECIFIC META TAGS WILL BE PLACED HERE
 DO NOT ADD YOUR OWN META TAGS, ONLY PUT CSS/JAVSCRIPT INCLUDES IN YOUR HEAD TAG -->
 <link href="/v/vspfiles/templates/ecomom/css/Imports.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="/v/vspfiles/templates/ecomom/hide_left_nav.js" language="JavaScript1.2"></script>
-
+<!--Power Reviews-->
+<script src="/v/dakota/js/prototype.js" type="text/javascript"></script>
+<script src="/v/dakota/js/dakota.js" type="text/javascript"></script>
+<script src="/v/dakota/js/configuration.js" type="text/javascript"></script>
+<!--end power reviews-->
 
 <script type="text/javascript" async="" src="https://i.kissmetrics.com/i.js"></script><script type="text/javascript" async="" src="https://s3.amazonaws.com/scripts.kissmetrics.com/59c89b57635437fe624fc93c900247e9ce0854f2.1.js"></script></head>
 <body id="body" onload="if(typeof(store_init)=='function')store_init(event);">
@@ -61,14 +72,14 @@ var _kmq = _kmq || [];
 <!-- Global Dropdown Menus -->
 	  <ul id="nav">
             <li id="nav-mom-baby"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/112.htm">Mom &amp; Baby</a></li>
-            <li id="nav-bath-body"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/114.htm">Bath &amp; Body</a></li>          
+            <li id="nav-organic-food"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/125.htm">Organic Food</a></li>   
+            <li id="nav-feeding-nursing"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/111.htm">Feeding &amp; Nursing</a></li>
+            <li id="nav-bath-body"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/114.htm">Bath &amp; Body</a></li>       
+            <li id="nav-health-wellness"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/115.htm">Health &amp; Wellness</a></li>   
             <li id="nav-toy-books"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/113.htm">Toys &amp; Books</a></li>
-            <li id="nav-healthy-eating"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/111.htm">Healthy Eating</a></li>
-            <li id="nav-green-home"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/110.htm">Green Home</a></li>
-            <li id="nav-health-wellness"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/115.htm">Health &amp; Wellness</a></li>
-            <li id="nav-eco-chic-clothing"><a title="Coming Soon!" href="#">Eco Chic Clothing</a></li>
-            <li id="nav-green-gift-guide"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/116.htm">Green Gift Guide</a></li>
-            <li id="nav-ecomom-community"><a href="http://community.ecomom.com">EcoMom Community</a></li>
+            <li id="nav-green-home"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/110.htm">Healthy Home</a></li>
+            <li id="nav-eco-chic-clothing"><a title="Eco Chic Clothing" href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/117.htm">Eco Chic Clothing</a></li>
+            <li id="nav-green-gift-guide"><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/116.htm">Green Gifts</a></li>
           </ul>
 		
  
@@ -92,48 +103,49 @@ function mOut3(src)
 function mClk3(src, popup) 
 { if (!popup) {window.location=src.getElementsByTagName('A')[0].getAttribute('href');} else {window.open(src);} }
 function mSubOvr3(src)
-{ if (src.className != 'nav nav_hover nav_selected subnav subnav_hover subnav_selected') src.className = 'nav nav_hover subnav subnav_hover'; }
+{ if (src.className != '') src.className = 'nav nav_hover subnav subnav_hover'; }
 function mSubOut3(src)
-{ if (src.className != 'nav nav_hover nav_selected subnav subnav_hover subnav_selected') src.className = 'nav subnav'; }
+{ if (src.className != '') src.className = 'nav subnav'; }
 function mSubClk3(src, popup) 
 { if (!popup) {window.location=src.getElementsByTagName('A')[0].getAttribute('href');} else {window.open(src);} }
 </script>
 <table cellpadding="0" cellspacing="0" border="0" class="nav">
+			
 <tbody><tr><td class="nav" onmouseover="mOvr3(this);" onmouseout="mOut3(this);" onclick="mClk3(this);">
-<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/112.htm" title="EcoMom.com-Eco-friendly Diapers and More">Mom &amp; Baby</a>
+<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/New-Mom-and-Baby-s/112.htm" title="New Mom and Baby">Mom &amp; Baby</a>
 </td></tr>
 <tr><td class="nav" onmouseover="mOvr3(this);" onmouseout="mOut3(this);" onclick="mClk3(this);">
-<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/114.htm" title="EcoMom.com-Eco-friendly Diapers and More">Bath &amp; Body</a>
+<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/Natural-Bath-and-Body-Products-s/114.htm" title="Natural Bath and Body Products">Bath &amp; Body</a>
 </td></tr>
 <tr><td class="nav" onmouseover="mOvr3(this);" onmouseout="mOut3(this);" onclick="mClk3(this);">
-<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/113.htm" title="EcoMom.com-Eco-friendly Diapers and More">Toys &amp; Books</a>
+<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/Natural-Baby-Toys-s/113.htm" title="Natural Baby Toys">Toys &amp; Books</a>
 </td></tr>
 <tr><td class="nav" onmouseover="mOvr3(this);" onmouseout="mOut3(this);" onclick="mClk3(this);">
-<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/111.htm" title="EcoMom.com-Eco-friendly Diapers and More">Feeding &amp; Nursing</a>
+<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/Natural-Baby-Feeding-and-Nursing-s/111.htm" title="Natural Baby Feeding and Nursing">Feeding &amp; Nursing</a>
 </td></tr>
 <tr><td class="nav" onmouseover="mOvr3(this);" onmouseout="mOut3(this);" onclick="mClk3(this);">
-<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/110.htm" title="EcoMom.com-Eco-friendly Diapers and More">Healthy Home</a>
+<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/Eco-friendly-Home-Products-s/110.htm" title="Eco-friendly Home Products">Healthy Home</a>
 </td></tr>
 <tr><td class="nav" onmouseover="mOvr3(this);" onmouseout="mOut3(this);" onclick="mClk3(this);">
-<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/115.htm" title="EcoMom.com-Eco-friendly Diapers and More">Health &amp; Wellness</a>
+<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/Natural-Supplements-and-Herbal-Remedies-s/115.htm" title="Natural Supplements and Herbal Remedies">Health &amp; Wellness</a>
 </td></tr>
 <tr><td class="nav" onmouseover="mOvr3(this);" onmouseout="mOut3(this);" onclick="mClk3(this);">
-<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/116.htm" title="EcoMom.com-Eco-friendly Diapers and More">Green Gifts</a>
+<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/Organic-Kids-Clothing-s/117.htm" title="Organic Kids Clothing">Eco Chic Clothing</a>
+</td></tr>
+<tr><td class="nav" onmouseover="mOvr3(this);" onmouseout="mOut3(this);" onclick="mClk3(this);">
+<img src="/v/vspfiles/templates/ecomom/images/Template/Menu3_Bullet.gif" alt="" align="absmiddle"> <a href="http://store.ecomom.com/Eco-friendly-Gifts-s/116.htm" title="Eco-friendly Gifts">Green Gifts</a>
 </td></tr>
 </tbody></table>
 </div>
                 
    
-                <div id="display_promotions_999"><div id="discountpromo40"><a href="/category_s/101.htm"><img src="/v/vspfiles/templates/custom/images/catimages/promo_banner_2010-04w5.jpg" border="0"></a>
-</div><div id="discountpromo39"><a href="/Articles.asp?ID=208"><img src="/v/vspfiles/templates/custom/images/catimages/promo_banner_2009-10w4r.jpg" border="0"></a>
-</div><div id="discountpromo40"><a href="/category-s/90.htm"><img src="/v/vspfiles/templates/custom/images/catimages/promo_banner_2010-03w2d.jpg" border="0"></a>
-</div><div id="promo_freeshipping"><a href="javascript:void(0);" onclick="window.open('/help_FreeShipping.asp', 'FreeShipping', 'scrollbars,status,resizable,width=300,height=300');">
-<img src="/v/vspfiles/templates/custom/images/catimages/left_freeship.gif" border="0"></a></div><div id="left_email_signup">
+                <div id="display_promotions_999"><a href="http://store.ecomom.com/category-s/304.htm"><img src="/v/vspfiles/templates/ecomom/images/leftnav-items/backtoschool_160_leftnav.jpg" alt="Back to School EcoMom Style" title="Back to School EcoMom Style" style="border: 0;"></a><a href="http://www.ecomom.com/"><img src="/v/vspfiles/templates/ecomom/images/leftnav-items/freeshipping_160_leftnav.jpg" alt="Free Shipping for orders over $50" title="Free Shipping for orders over $50" style="border: 0;margin-top: 20px;"></a><a href="http://store.ecomom.com/category-s/302.htm"><img src="/v/vspfiles/templates/ecomom/images/leftnav-items/dailydeal_160_leftnav.jpg" alt="Daily Deal" title="Daily Deal" style="border: 0;"></a><a href="http://store.ecomom.com/Articles.asp?ID=271"><img src="/v/vspfiles/templates/ecomom/images/leftnav-items/videocontest_160_leftnav.jpg" alt="You could win $200 with our video contest." title="You could win $200 with our video contest." style="border: 0;margin-top: 20px;"></a><a href="http://store.ecomom.com/Articles.asp?ID=188"><img src="/v/vspfiles/templates/ecomom/images/leftnav-items/cat_weeklyspecials.jpg" alt="Newsletter - Subscribe Now" title="Newsletter - Subscribe Now" style="border: 0;margin-top: 20px;"></a><a href="http://blog.ecomom.com/"><img src="/v/vspfiles/templates/ecomom/images/leftnav-items/cat_community.jpg" alt="EcoMom Community - Join Today" title="EcoMom Community - Join Today" style="border: 0;margin-top: 20px;"></a><div id="left_email_signup">
 <div class="email_innerds">
 <div align="center" style="padding-top: 64px;"><a href="/Articles.asp?ID=188"><img src="/v/vspfiles/templates/custom/images//buttons/btn_orange_sign_up.gif" border="0" alt="SignUp"></a>
 </div>
 </div>
-</div><a href="http://store.ecomom.com/category-s/101.htm"><img src="/v/vspfiles/templates/ecomom/images/leftnav-items/garden_leftnav_160.jpg" alt="Get your kids into the Green Gardening Groove" title="Get your kids into the Green Gardening Groove" style="border: 0;"></a><a href="http://store.ecomom.com/Articles.asp?ID=188"><img src="/v/vspfiles/templates/ecomom/images/leftnav-items/cat_newsletter.jpg" alt="Newsletter - Subscribe Now" title="Newsletter - Subscribe Now" style="border: 0;margin-top: 20px;"></a><a href="http://store.ecomom.com/EcoPass-One-Year-Membership-p/membership-ecopass-001.htm"><img src="/v/vspfiles/templates/ecomom/images/leftnav-items/cat_ecopass.jpg" alt="Looking for FREE Shipping - EcoPass is Here - Join Today" title="Looking for Free Shipping - EcoPass is Here - Join Today" style="border: 0;margin-top: 20px;"></a><a href="http://community.ecomom.com/"><img src="/v/vspfiles/templates/ecomom/images/leftnav-items/cat_community.jpg" alt="EcoMom Community - Join Today" title="EcoMom Community - Join Today" style="border: 0;margin-top: 20px;"></a><a href="http://www.greenquizquest.com" target="_blank"><img src="/v/vspfiles/templates/ecomom/images/leftnav-items/ISponsorGQQ.gif" alt="Green Quiz Content" title="Green Quiz Contest" style="border: 0;margin-top: 20px;"></a></div>
+</div><div id="discountpromo40"><a href="/category-s/90.htm"><img src="/v/vspfiles/templates/custom/images/catimages/promo_banner_2010-03w2d.jpg" border="0"></a>
+</div></div>
           </td>
           <td valign="top">
                <table border="0" cellspacing="0" cellpadding="0">
@@ -650,9 +662,9 @@ window.external.AddFavorite(bookmarkurl, bookmarktitle);
 	<div id="footer_resources" class="footer_links">
             <h5>Resources</h5>
 		<ul>
-                    <li><a href="http://community.ecomom.com">EcoMom community</a></li>
-                    <li><a href="http://blog.ecomom.com">EcoMom blog</a></li>
-                    <li><a href="#" title="coming soon!">EcoMom tv</a></li>
+                    <li><a href="http://blog.ecomom.com">EcoMom community</a></li>
+                    <li><a href="http://blog.ecomom.com/category/tip-of-the-day/">EcoMom tip of the day</a></li>
+                    <li><a href="http://www.youtube.com/ecomomtv" title="EcoMomTV">EcoMom tv</a></li>
                     <li><a href="http://store.ecomom.com/Articles.asp?ID=188&amp;">EcoMom newsletter</a></li>
                     <li><a href="http://store.ecomom.com/category_s/90.htm">EcoMom ecopass</a></li>
 		</ul>
@@ -669,13 +681,15 @@ window.external.AddFavorite(bookmarkurl, bookmarktitle);
 	<div id="footer_categories" class="footer_links">
             <h5>Shop by<br>Categories</h5>
 		<ul>
-                    <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/112.htm">mom &amp; baby</a></li>
-                    <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/114.htm">bath &amp; body</a></li>
-                    <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/113.htm">toys &amp; books</a></li>
-                    <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/111.htm">healthy eating</a></li>
-                    <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/110.htm">green home</a></li>
-                    <li><a href="http://store.ecomom.com/category_s/117.html">eco chic clothing</a></li>
-                    <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/116.htm">green gift guide</a></li>
+            <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/112.htm">mom &amp; baby</a></li>
+            <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/125.htm">organic food</a></li>   
+            <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/111.htm">feeding &amp; nursing</a></li>
+            <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/114.htm">bath &amp; body</a></li>       
+            <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/115.htm">health &amp; wellness</a></li>   
+            <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/113.htm">toys &amp; books</a></li>
+            <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/110.htm">healthy home</a></li>
+             <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/117.htm">eco chic clothing</a></li>
+            <li><a href="http://store.ecomom.com/EcoMom-com-Eco-friendly-Diapers-and-More-s/116.htm">green gifts</a></li>
 		</ul>
 	</div>
 	<div id="footer_support" class="footer_links">
@@ -694,8 +708,8 @@ window.external.AddFavorite(bookmarkurl, bookmarktitle);
 	</div>
         <div id="footer_right_container">
             <div id="footer_site_info">
-                For assistance, call 310-997-BABY (2229)<br>
-                <a href="/Terms.asp">Copyright © <script type="text/javascript">document.write((new Date()).getFullYear());</script>2020  &nbsp;Ecomom.com. All Rights Reserved.</a><br>
+                For assistance, call <a href="tel:1-310-997-2229" style="color: white;">310-997-BABY (2229)</a><br>
+                <a href="/Terms.asp">Copyright © <script type="text/javascript">document.write((new Date()).getFullYear());</script>2020  &nbsp;Feburary Won, Inc.. All Rights Reserved.</a><br>
 
 <!--===========================================================================================
 				VOLUSION LINK - BEGIN
@@ -728,7 +742,7 @@ Customer has agreed per Volusionâ€™s Terms of Service (http://www.volusion.
 <a target="_new" href="http://www.thawte.com/digital-certificates/">ABOUT SSL CERTIFICATES</a>
             </div>
         </div>
-        <div id="phone">Call Us:&nbsp;1.310.997.BABY (2229)</div>
+        <div id="phone">Call Us:&nbsp;<a href="tel:1-310-997-2229" style="color: white;">1.310.997.BABY (2229)</a></div>
         <div class="clearboth">&nbsp;</div>
     </div>
 </div>
@@ -766,7 +780,13 @@ v_ga_track("UA-7020276-1",true,".ecomom.com");
 <!-- End Google Analytics-->
 
 
+
+
 <script type="text/javascript">function store_init(event){} AttachEvent(window, 'load', store_init);</script>
+
+<script type="text/javascript">
+	addCartLink();
+</script>
 
 
 </body></html>
