--- a/a/au/aus/aussiebroadband.com.au.html
+++ b/a/au/aus/aussiebroadband.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the aussiebroadband.com.au privacy policy that was archived on 2009-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091223193954id_/http%3A//www.aussiebroadband.com.au/about/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aussiebroadband.com.au privacy policy that was archived on 2010-08-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100821115329id_/http%3A//www.aussiebroadband.com.au/about/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html lang="en"><head>
 
@@ -33,14 +33,14 @@ Aussie Broadband - About - Privacy Policy</title>
 
 	-->
 
-	<link href="/assets/css/screen.css" media="all" rel="stylesheet">
-	<link href="/assets/css/print.css" media="print,handheld" rel="stylesheet">
-	<!--[if IE 6]><style type="text/css"> @import url(/assets/css/ie6.css); </style><![endif]-->
-	<!--[if IE 7]><style type="text/css"> @import url(/assets/css/ie7.css); </style><![endif]-->
+	<link href="http://static1.aussiebroadband.com.au/www.aussiebroadband.com.au/assets/css/screen.css" media="all" rel="stylesheet">
+	<link href="http://static3.aussiebroadband.com.au/www.aussiebroadband.com.au/assets/css/print.css" media="print,handheld" rel="stylesheet">
+	<!--[if IE 6]><style type="text/css"> @import url(http://static3.aussiebroadband.com.au/www.aussiebroadband.com.au/assets/css/ie6.css); </style><![endif]-->
+	<!--[if IE 7]><style type="text/css"> @import url(http://static3.aussiebroadband.com.au/www.aussiebroadband.com.au/assets/css/ie7.css); </style><![endif]-->
 
-	<script type="text/javascript" src="/assets/js/jquery-1.3.2.min.js"></script>
-	<script src="/assets/js/jquery.password.js" type="text/javascript" charset="utf-8"></script>
-	<script src="/assets/js/jquery.common.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript" src="http://static2.aussiebroadband.com.au/www.aussiebroadband.com.au/assets/js/jquery-1.3.2.min.js"></script>
+	<script src="http://static3.aussiebroadband.com.au/www.aussiebroadband.com.au/assets/js/jquery.password.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://static1.aussiebroadband.com.au/www.aussiebroadband.com.au/assets/js/jquery.common.js" type="text/javascript" charset="utf-8"></script>
 
 		
 		
@@ -61,9 +61,9 @@ Aussie Broadband - About - Privacy Policy</title>
 								<legend></legend>
 								<p>
 									<label for="search">Search</label>
-									<input type="image" class="button" src="/assets/img/search_button.png" name="search-button" alt="Search" id="search-button">
+									<input type="image" class="button" src="http://static3.aussiebroadband.com.au/www.aussiebroadband.com.au/assets/img/search_button.png" name="search-button" alt="Search" id="search-button">
 									<span class="input-wrapper">
-										<input type="text" class="text has-value" name="v" value="SEARCH" id="search">
+										<input type="text" class="text" name="v" value="SEARCH" id="search">
 									</span>
 								</p>
 							</fieldset>
@@ -82,7 +82,7 @@ Aussie Broadband - About - Privacy Policy</title>
 								<li><a href="/adsl/hardware">Hardware</a></li>
 								<li><a href="/adsl/data-blocks">Data Blocks</a></li>
 								<li><a href="/adsl/more-information">More Information</a></li>
-								<li class="last"><a href="https://get.aussiebroadband.com.au/adsl.php">Signup</a></li>
+								<li class="last"><a href="https://www.aussiebroadband.com.au/signup/">Signup</a></li>
 							</ul>
 						</li>
 						<li class="odd">
@@ -94,28 +94,30 @@ Aussie Broadband - About - Privacy Policy</title>
 								<li><a href="/adsl2/data-blocks">Data Blocks</a></li>
 								<li><a href="/adsl2/availability">Availability</a></li>
 								<li><a href="/adsl2/more-information">More Information</a></li>
-								<li class="last"><a href="https://get.aussiebroadband.com.au/adsl.php">Signup</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="/satellite">satellite<span></span></a>
-							<ul class="sub swingin">
-								<li class="first"><a href="/satellite">About Satellite</a></li>
-								<li><a href="/satellite/plans-and-pricing">Plans &amp; Pricing</a></li>
-								<li><a href="/satellite/installation">Installation</a></li>
-								<li><a href="/satellite/data-blocks">Data Blocks</a></li>
-								<li><a href="/satellite/subsidy">Eligibility</a></li>
-								<li><a href="/satellite/more-information">More Information</a></li>
-								<li class="last"><a href="https://get.aussiebroadband.com.au/satellite.php">Signup</a></li>
+								<li class="last"><a href="https://www.aussiebroadband.com.au/signup/">Signup</a></li>
 							</ul>
 						</li>
 						<li class="odd">
-							<a href="/wireless">wireless<span></span></a>
+							<a href="/wimax/">wimax<span></span></a>
 							<ul class="sub swingin">
-								<li class="first"><a href="/wireless">About Wireless</a></li>
-								<li><a href="/wireless/fixed">Fixed Wireless</a></li>
-								<li><a href="/wireless/mobile">Mobile Wireless</a></li>
-								<li class="last"><a href="/wireless/data-blocks">Data Blocks</a></li>
+								<li class="first"><a href="/wimax/">About WiMAX Broadband</a></li>
+								<li><a href="/wimax/plans-and-pricing/">WiMAX Plans &amp; Pricing</a></li>
+								<li><a href="/wireless/fixed/plans-and-pricing/">Non WiMAX Plans &amp; Pricing</a></li>
+								<li><a href="/wimax/upgrading/">Upgrading to WiMAX</a></li>
+								<li><a href="/wimax/extrafeatures/">WiMAX Extra Features</a></li>
+								<li><a href="/wimax/coverage/">Check Coverage</a></li>
+								<li><a href="/wimax/australian-broadband-guarantee/">Australian Broadband Guarantee</a></li>
+								<li><a href="/wimax/data-blocks/">Data Blocks</a></li>
+								<li class="last"><a href="https://www.aussiebroadband.com.au/signup/">Signup</a></li>
+							</ul>
+						</li>
+						<li class="odd">
+							<a href="/mobile">3G<span></span></a>
+							<ul class="sub swingin">
+								<li class="first"><a href="/mobile">About 3G Mobile Broadband</a></li>
+								<li><a href="/mobile/plans-and-pricing">Plans &amp; Pricing</a></li>
+								<li><a href="/mobile/hardware">Hardware</a></li>
+								<li class="last"><a href="/mobile/coverage">Check Coverage</a></li>
 							</ul>
 						</li>
 						<li>
@@ -125,6 +127,17 @@ Aussie Broadband - About - Privacy Policy</title>
 								<li><a href="/phone/home-phone">Home Phone</a></li>
 								<li class="last"><a href="/phone/voip">VOIP</a></li>
 							</ul>
+						</li>
+						<li>
+							<a href="/business/">business<span></span></a>
+                            <ul class="sub swingin">
+                                <li class="first"><a href="/business/privateip/">Private IP - MPLS</a></li>
+                                <li><a href="/business/corporatebroadband/">Corporate Broadband</a></li>
+                                <li><a href="/business/businessbroadband/">Business Broadband</a></li>
+                                <li><a href="/business/hostedpbx/">Hosted PBX</a></li>
+                                <li><a href="/business/siptrunking/">SIP Trunking</a></li>
+                                <li class="last"><a href="/business/hosting/">Hosting</a></li>
+                            </ul>
 						</li>
 						<li>
 							<a href="/support">support<span></span></a>
@@ -173,34 +186,20 @@ Aussie Broadband - About - Privacy Policy</title>
 				<p>
 					<input class="text username" type="text" name="login_username" value="">
 					<input class="password" type="password" name="login_password" value="">
-					<input class="button submit has-value" type="image" src="/assets/img/btn_menu_login.png" name="submit" value="go">
+					<input class="button submit" type="image" src="http://www.aussiebroadband.com.au/assets/img/btn_menu_login.png" name="submit" value="go">
 				</p>
 			</fieldset>
 		</form>
 
-        <script type="text/javascript">
-        function changeAction(value) {
-            email = value.value;
-            var domain = email.substring(0, email.lastIndexOf('@')+1);
-            var domain2 = email.substring(domain.length, email.length+1);
-
-            if (domain2 == 'westvic.com.au') {
-                document.forms[2].action = "http://mail.westvic.com.au/src/redirect.php";
-            }else{
-                document.forms[2].action = "https://mail.aussiebroadband.com.au/src/redirect.php";
-            }
-        }
-        </script>
-
-				<form id="webmail" action="https://mail.aussiebroadband.com.au/src/redirect.php" method="post" onsubmit="changeAction(document.getElementById('email'))">
+				<form id="webmail" action="https://smtp2.aussiebroadband.com.au/src/redirect.php" method="post">
 			<fieldset id="login_to_your_webmail" class="">
 				<legend>Login to your Webmail</legend>
 				<p>
 					<input class="text email" type="text" id="email" name="login_username" value="">
 					<input class="password" type="password" name="secretkey" value="">
-					<input type="hidden" name="js_autodetect_results" value="1" class="has-value">
-					<input type="hidden" name="just_logged_in" value="1" class="has-value">
-					<input class="button submit has-value" type="image" src="/assets/img/btn_menu_login.png" name="submit" value="go">
+					<input type="hidden" name="js_autodetect_results" value="1">
+					<input type="hidden" name="just_logged_in" value="1">
+					<input class="button submit" type="image" src="http://www.aussiebroadband.com.au/assets/img/btn_menu_login.png" name="submit" value="go">
 				</p>
 			</fieldset>
 		</form>
@@ -287,6 +286,7 @@ Aussie Broadband - About - Privacy Policy</title>
 				<li><a href="/about/employment">employment</a></li>
 				<li><a href="/about/westvic">westvic broadband</a></li>
 				<li><a href="/about/wideband">wideband networks</a></li>
+				<!--<li><a href="/about/broadbandanywhere">broadband anywhere</a></li>-->
 			</ul>
 		</li>
 		<li>
@@ -313,21 +313,22 @@ Aussie Broadband - About - Privacy Policy</title>
 	<ul class="arrows">
 		<li><a href="/plan-wizard/" title="find the right plan for me">find the right plan for me</a></li>
 		<li><a href="/availability/" title="check ADSL availability">check ADSL availability</a></li>
-		<li><a href="https://get.aussiebroadband.com.au" title="sign up for a broadband connection">sign up for broadband</a></li>
-		<li><a href="/satellite/subsidy/" title="am I eligible for a subsidy?">am I eligible for a subsidy?</a></li>
+		<li><a href="https://www.aussiebroadband.com.au/signup/" title="sign up for a broadband connection">sign up for broadband</a></li>
 		<li><a href="https://my.aussiebroadband.com.au" title="check my usage">check my usage</a></li>
 		<li><a href="https://my.aussiebroadband.com.au" title="pay my account">pay my account</a></li>
+		<li><a href="/wimax/midnorth/" title="Register your interest for the Mid-North Project SA"><span style="color: red; font-weight: bold">Register your interest for <br>the Mid-North Project SA</span></a></li>
 	</ul>
-</div><!-- .sidebar-extra -->	<div id="quick-links" class="sidebar-extra">
+</div><!-- .sidebar-extra -->
+	<div id="quick-links" class="sidebar-extra">
 	<h6>Quick Links</h6>
 	<ul class="arrows">
 		<li><a href="/support" title="search our support &amp; help documents">support search</a></li>
 		<li><a href="/about/contact-us" title="contact Aussie Broadband">contact Aussie Broadband</a></li>
 		<li><a href="/about/refer-a-friend/" title="refer a friend">refer a friend</a></li>
-		<li><a href="https://my.aussiebroadband.com.au" title="my.aussie Login">my.aussie Login</a></li>
-		<li><a href="https://mail.aussiebroadband.com.au" title="Webmail">Webmail</a></li>
-		<li><a href="http://games.aussiebroadband.com.au/" title="Aussie Broadband Games Network">Aussie Gamers</a></li>
-	</ul>
+		<li><a href="https://my.aussiebroadband.com.au" title="my.aussie Login">my.aussie login</a></li>
+		<li><a href="https://mail.aussiebroadband.com.au" title="Webmail">webmail</a></li>
+		<li><a href="http://games.aussiebroadband.com.au/" title="Aussie Broadband Games Network">aussie gamers</a></li>
+        	</ul>
 </div><!-- .sidebar-extra -->
 </div><!-- .innerwrap -->
 		</div><!-- #sidebar -->
@@ -356,12 +357,11 @@ Aussie Broadband - About - Privacy Policy</title>
 							<p>PO Box 709 Warrnambool  Vic 3280</p>
 						</div><!-- .warnambool -->
 					</div><!-- #footer-contact -->
-	
-					<div id="sales-and-support" class="grid_1">
-						<h6>Sales &amp; support</h6>
-						<p>Tel: 1300 880 905</p>
-						<p>Fax: 1300 121 677</p>
-						<p><a href="/about/contact-us" title="Send an enquiry">send an enquiry</a> </p>
+					<div id="footer-contact" class="grid_1">
+                            <br>
+                            <p><strong>Adelaide Office</strong></p>
+                            <p>46 Surrey Road, Keswick SA 5035</p>
+                            <p></p>
 					</div><!-- #sales-and-support -->
 				</div>
 	
@@ -382,20 +382,38 @@ Aussie Broadband - About - Privacy Policy</title>
 	</div><!-- #container -->
 
 	<script type="text/javascript">
-	var analyticsHost = 'aussiebroadband.com.au';
-	var analyticsCode = 'UA-10292624-1';
-	if (document.location.hostname == analyticsHost || document.location.hostname == 'www.' + analyticsHost) {
-		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-	}
+$(function() {
+function gaSSDSLoad (acct) {
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."),
+      pageTracker,
+      s;
+  s = document.createElement('script');
+  s.src = gaJsHost + 'google-analytics.com/ga.js';
+  s.type = 'text/javascript';
+  s.onloadDone = false;
+  function init () {
+    pageTracker = _gat._getTracker(acct);
+    pageTracker._setDomainName('none');
+    pageTracker._trackPageview();
+  }
+  s.onload = function () {
+    s.onloadDone = true;
+    init();
+  };
+  s.onreadystatechange = function() {
+    if (('loaded' === s.readyState || 'complete' === s.readyState) && !s.onloadDone) {
+      s.onloadDone = true;
+      init();
+    }
+  };
+  document.getElementsByTagName('head')[0].appendChild(s);
+}
+
+/* and run it */
+gaSSDSLoad("UA-10292624-1");
+});
 </script>
-<script type="text/javascript">
-	if (document.location.hostname == analyticsHost || document.location.hostname == 'www.' + analyticsHost) {
-		var pageTracker = _gat._getTracker(analyticsCode);
-		pageTracker._initData();
-		pageTracker._trackPageview();
-	}
-</script>
+
 
 
 </body></html>
