--- a/j/jo/joo/joomlancers.com.html
+++ b/j/jo/joo/joomlancers.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the joomlancers.com privacy policy that was archived on 2010-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100615083932id_/http%3A//www.joomlancers.com/joomlancerscom-privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the joomlancers.com privacy policy that was archived on 2010-08-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100822110448id_/http%3A//www.joomlancers.com/joomlancerscom-privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb"><head>
   <base href="http://www.joomlancers.com/joomlancerscom-privacy-policy.html">
@@ -149,7 +149,7 @@ var jc_commentForm;
 </script>
 
 	<div class="greeting-member">
-		<a href="/component/user/?task=login&amp;1110ef33c115684a662177a651d7cea3=1" onclick="return hs.htmlExpand(this, { contentId:'id_highslide_login', outlineType : 'rounded-white', outlineWhileAnimating : true, width : '400'} )" class="highslide">
+		<a href="/component/user/?task=login&amp;d3a47fed53a06a94d714ca9f79794609=1" onclick="return hs.htmlExpand(this, { contentId:'id_highslide_login', outlineType : 'rounded-white', outlineWhileAnimating : true, width : '400'} )" class="highslide">
 			Login		</a>
 	<!--LOFIN FORM content-->
 	<div class="highslide-html-content" id="id_highslide_login">
@@ -193,7 +193,7 @@ var jc_commentForm;
 					<input type="hidden" name="option" value="com_user">
 					<input type="hidden" name="task" value="login">
 					<input type="hidden" name="return" value="">
-					<input type="hidden" name="1110ef33c115684a662177a651d7cea3" value="1">				</form>
+					<input type="hidden" name="d3a47fed53a06a94d714ca9f79794609" value="1">				</form>
 				
 				</div>
 			</div>
@@ -559,7 +559,7 @@ var jc_commentForm;
 					<input type="hidden" name="task" value="register_save">
 					<input type="hidden" name="id" value="0">
 					<input type="hidden" name="gid" value="0">
-					<input type="hidden" name="1110ef33c115684a662177a651d7cea3" value="1">				</form>
+					<input type="hidden" name="d3a47fed53a06a94d714ca9f79794609" value="1">				</form>
 			</div>
 		</div>
 	</div>
@@ -617,7 +617,7 @@ var jc_commentForm;
 <ul class="menu"><li id="current" class="active item64"><a href="/joomlancerscom-privacy-policy.html"><span>Privacy Policy</span></a></li><li class="item65"><a href="/terms-of-use.html"><span>Terms of Use</span></a></li></ul>
 		<small>Copyright © 2006 - 2010 Joomlancers.com - &nbsp;All Rights Reserved. Developed &amp; Designed by &nbsp;<a href="http://www.joomlart.com/" title="Visit Joomlart.com!" target="blank">JoomlArt.com</a>. <a href="/provider/tests/">Tests</a> by <a href="http://www.expertrating.com" target="_blank" title="ExpertRating - Online Certification and Employment Testing">ExpertRating.com</a></small>
 <br>
-<small>The Joomlancers™ name and logo are registered trademarks of JOOM Solutions. <a target="_blank" href="http://www.joomla.org">Joomla!</a> ® is a registered trademark of <a target="_blank" href="http://opensourcematters.org">Open Source Matters, Inc</a>, - JoomLancers.com is not affiliated with or endorsed by Open Source Matters or the Joomla! Project. </small>
+<small>The Joomlancers™ name and logo are registered trademarks of <a href="http://www.joom.vn" title="J.O.O.M Solutions">J.O.O.M Solutions</a>. <a target="_blank" href="http://www.joomla.org">Joomla!</a> ® is a registered trademark of <a target="_blank" href="http://opensourcematters.org">Open Source Matters, Inc</a>, - JoomLancers.com is not affiliated with or endorsed by Open Source Matters or the Joomla! Project. </small>
 
 
  	  
