molloy.edu (archived on 2010-08-25)
{
  "alexa_rank": 797900,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 14117,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.37,
  "homepage_snapshot_redirected_domain": "molloy.edu",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100823130021id_/http://www.molloy.edu/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100823130021id_/http%3A//molloy.edu",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "molloy.edu",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100825171742id_/http%3A//www.molloy.edu/privacy.asp",
  "policy_title": "Molloy College",
  "policy_url": "molloy.edu/privacy.asp",
  "sha1": "3c95438a5f8d00f9ad43ebd2b8a338e16b42f951",
  "simhash": 1217236342802261851,
  "simhash_updated": false,
  "site_hostname": "molloy.edu",
  "site_url": "http://molloy.edu",
  "smog": 17.88,
  "strict_updated": false,
  "timestamp": "20100825171742",
  "word_count": 2224,
  "year": 2010
}

--- a/m/mo/mol/molloy.edu.html
+++ b/m/mo/mol/molloy.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the molloy.edu privacy policy that was archived on 2010-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100624074209id_/http%3A//www.molloy.edu/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the molloy.edu privacy policy that was archived on 2010-08-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100825171742id_/http%3A//www.molloy.edu/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>Molloy College</title>
@@ -250,8 +250,8 @@ function preloadImages() {
  <table width="100%" border="0" align="right" cellspacing="0" bgcolor="#FFFFFF">
     <tbody><tr valign="top">
 	<!-- Delete the following from the line below to show text:  "(starting comment) and "" (ending comment even though there is no space) -->
-      <td class="red"><div align="center" width="100%"><font style="font-size: 12px; font-family: Arial, Helvetica, sans-serif;"><!--In observance of Memorial Day, Molloy College and the Suffolk Center will be closed Monday, 
-May 31. The College will reopen on Tuesday, June 1.-->  
+      <td class="red"><div align="center" width="100%"><font style="font-size: 12px; font-family: Arial, Helvetica, sans-serif;"><!--In observance of Independence Day, Molloy College and the Suffolk Center <br> will be closed Friday, 
+July 2 through Monday, July 5. <br> The College will reopen on Tuesday, July 6.-->
         
       </font></div></td>
       <td align="right" nowrap=""><span class="red"></span><img src="/images/search_label.gif" border="0" alt="Search" width="55" height="17">
@@ -451,7 +451,7 @@ When you visit this Web site, Molloy automatically collects and stores the  foll
 						<table border="0" cellpadding="16" cellspacing="0" width="208" bgcolor="#c1b691">
 							<tbody><tr>
 																<td valign="top" bgcolor="#c1b691" class="white"><font face="arial" size="2">
-		<font size="3"><strong>Unique Offerings</strong></font></font><p><font face="arial" size="2">Each season, we present the Molloy College Film Festival, which screens notable films on interesting themes. The theme of the Spring Film Festival is "The Writing Life," and features films about writers, their lives and their work. Two films featured in the festival this season are "American Splendor," based on the real life of underground comic book writer Harvey Pekar, and "Capote," based on the life of author Truman Capote and his pivotal, non-fiction book, In Cold Blood. All screenings take place in the Hays Theatre in the Wilbur Arts Center. 
+		<font size="3"><strong>Unique Offerings</strong></font></font><p><font face="arial" size="2">At Molloy, you'll have the opportunity to develop the solid leadership skills you need to secure an excellent career in today's difficult job market. We offer leadership programs that are specifically designed to make you a top candidate after graduation, including the Molloy-Leadership, Education, Achievement &amp; Development Program (M-L.E.A.D.). This program offers leadership education, development and training opportunities.
 								
 							</font>	
 								</p></td>
