zoeskitchen.com (archived on 2010-08-28)
{
  "alexa_rank": 986027,
  "analysis_subcorpus": true,
  "categories": "business;foodandrecipes;shopping",
  "char_count": 5067,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.85,
  "homepage_snapshot_redirected_domain": "zoeskitchen.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100915070449id_/http://zoeskitchen.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100915070449id_/http%3A//zoeskitchen.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "zoeskitchen.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100828043518id_/http%3A//zoeskitchen.com/privacy.asp",
  "policy_title": "Zo\u00ebs Kitchen",
  "policy_url": "zoeskitchen.com/privacy.asp",
  "sha1": "ae677b2741c71683bbde9adc7d06ed189d032b93",
  "simhash": 990176492796535674,
  "simhash_updated": false,
  "site_hostname": "zoeskitchen.com",
  "site_url": "http://zoeskitchen.com",
  "smog": 15.25,
  "strict_updated": false,
  "timestamp": "20100828043518",
  "word_count": 820,
  "year": 2010
}

--- a/z/zo/zoe/zoeskitchen.com.html
+++ b/z/zo/zoe/zoeskitchen.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the zoeskitchen.com privacy policy that was archived on 2010-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100628161116id_/http%3A//www.zoeskitchen.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zoeskitchen.com privacy policy that was archived on 2010-08-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100828043518id_/http%3A//zoeskitchen.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Zoës Kitchen</title>
@@ -360,7 +360,7 @@ var a_vars = Array();
 var pagename='';
 var imedia_url = 'http://stats.infomedia.net/collect.asp';
 var imedia_client = 1274;
-var imedia_returning = 1;
+var imedia_returning = 0;
 //-->
 </script>
 <script language="javascript" src="http://stats.infomedia.net/collectNEW.js" type="text/javascript"></script>
