funewsite.com (archived on 2010-08-29)
{
  "alexa_rank": 81093,
  "analysis_subcorpus": true,
  "categories": "",
  "char_count": 8578,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.21,
  "homepage_snapshot_redirected_domain": "funewsite.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100912145515id_/http://funewsite.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100912145515id_/http%3A//funewsite.com",
  "interval": "2010_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "funewsite.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100829161026id_/http%3A//funewsite.com/%3Fpage_id%3D1653",
  "policy_title": "Privacy Policy | FUNEWSITE",
  "policy_url": "funewsite.com/?page_id=1653",
  "sha1": "31425ea1dd7d543b33fab9776c767427e62cdbd4",
  "simhash": 13784837701383658528,
  "simhash_updated": true,
  "site_hostname": "funewsite.com",
  "site_url": "http://funewsite.com",
  "smog": 16.77,
  "strict_updated": true,
  "timestamp": "20100829161026",
  "word_count": 1285,
  "year": 2010
}

--- a/f/fu/fun/funewsite.com.html
+++ b/f/fu/fun/funewsite.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the funewsite.com privacy policy that was archived on 2010-01-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100103003457id_/http%3A//funewsite.com/%3Fpage_id%3D1653) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the funewsite.com privacy policy that was archived on 2010-08-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100829161026id_/http%3A//funewsite.com/%3Fpage_id%3D1653) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -176,6 +176,7 @@ We provide Visitors and Authorized Customers with a mechanism to delete/deactiva
 We will let our Visitors and Authorized Customers know about changes to our privacy policy by posting such changes on the Site. However, if we are changing our privacy policy in a manner that might cause disclosure of Personally Identifiable Information that a Visitor or Authorized Customer has previously requested not be disclosed, we will contact such Visitor or Authorized Customer to allow such Visitor or Authorized Customer to prevent such disclosure. </p>
 <p>Links:<br>
 This web site contains links to other web sites. Please note that when you click on one of these links, you are moving to another web site. We encourage you to read the privacy statements of these linked sites as their privacy policies may differ from ours. </p>
+<p>We partner with ValueClick to serve ads and/or collect certain information when you visit our website. ValueClick may use cookies or web beacons to collect non-personally identifiable information during your visit to this website in order to help show advertisements on other websites likely to be more interesting to you. To learn more about this “behavioral advertising” practice or to opt-out of this use of your anonymous information, you can visit  http://www.valueclickmedia.com/member_privacy.shtml  </p>
 						</div>
 					 
 					 
@@ -184,7 +185,7 @@ This web site contains links to other web sites. Please note that when you click
 				</div></div></div></div></div>
 				<!-- end single post section -->
 															</div>
-:::::<div style="visibility:hidden; display:none"><a href="http://toddlerbedbedding.info">Toddler Bed Bedding</a></div><div style="visibility:hidden; display:none"><a href="http://throwbackfootballjerseys.net">Cheap Retro Replica NFL NBA MLB Throwback Football Basketball Jerseys</a> | 
+<div style="visibility:hidden; display:none"><a href="http://throwbackfootballjerseys.net">Cheap Retro Replica NFL NBA MLB Throwback Football Basketball Jerseys</a> | 
 <a href="http://hp-ink-cartridges.org/">hp printer ink cartridges refills</a>| <a href="http://makingjewelrysupplies.com/">Jewelry Making Supplies</a> | <a href="http://thumbjointpain.net/">Thumb Joint Pain</a> | <a href="http://dog-health-problems.org/">Dog Health Problems</a> |<a href="http://tinkerbellpersonalchecks.com/">Tinkerbell Personal Checks</a> |<a href="http://garden-planters.com/">Garden Planters</a> 
 </div></div>
 		<div id="sidebars">
@@ -796,5 +797,9 @@ The Emmys were by far the biggest event of the weekend. But there were tons of c
 	Copyright © 2009 <a href="http://funewsite.com" title="FUNEWSITE">FUNEWSITE</a> . All rights reserved.<a href="http://funewsite.com/?page_id=1648" title="Contact Us"> Contact Us</a> |    <a href="http://funewsite.com/?page_id=1651" title="Site Map">Site Map   </a> | <a href="http://funewsite.com/?page_id=1653" title="Privacy Policy"> Privacy Policy </a>  
 	</div>
 </div>
-
+<!-- ValueClick Media 728x90 LEADERBOARD CODE for funny news -->
+<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=54396&amp;m=1&amp;tp=5&amp;d=j&amp;t=n"></script>
+<noscript><a href="http://media.fastclick.net/w/click.here?sid=54396&m=1&c=1" target="_blank">
+<img src="http://media.fastclick.net/w/get.media?sid=54396&m=1&tp=5&d=s&c=1" width=728 height=90 border=1></a></noscript>
+<!-- ValueClick Media 728x90 LEADERBOARD CODE for funny news -->
 </body></html>
