twoplustwo.com (archived on 2010-08-30)
{
  "alexa_rank": 3907,
  "analysis_subcorpus": true,
  "categories": "gambling;games",
  "char_count": 14386,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.15,
  "homepage_snapshot_redirected_domain": "twoplustwo.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20100918150257id_/http://www.twoplustwo.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20100918150257id_/http%3A//twoplustwo.com",
  "interval": "2010_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "twoplustwo.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20100830034522id_/http%3A//www.twoplustwo.com/privacy.php",
  "policy_title": "Two Plus Two Forums Privacy Policy",
  "policy_url": "twoplustwo.com/privacy.php",
  "sha1": "1bada6d8362df54bf45c00f02c6caaf16df2a057",
  "simhash": 3989378087864247572,
  "simhash_updated": false,
  "site_hostname": "twoplustwo.com",
  "site_url": "http://twoplustwo.com",
  "smog": 14.7,
  "strict_updated": false,
  "timestamp": "20100830034522",
  "word_count": 2290,
  "year": 2010
}

--- a/t/tw/two/twoplustwo.com.html
+++ b/t/tw/two/twoplustwo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the twoplustwo.com privacy policy that was archived on 2010-01-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100125095745id_/http%3A//www.twoplustwo.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the twoplustwo.com privacy policy that was archived on 2010-08-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100830034522id_/http%3A//www.twoplustwo.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/0809-tpti-template.dwt.php" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -35,7 +35,7 @@
           <li><a href="http://www.twoplustwo.com/">Two Plus Two</a></li>
           <li><a href="http://www.twoplustwo.com/magazine/">Poker Magazine</a></li>
           <li><a href="http://www.twoplustwo.com/books/">Poker Books</a></li>
-          <li><a href="http://pokercast.twoplustwo.com/index.php">PokerCast</a></li>
+          <li><a href="http://pokercast.twoplustwo.com/">PokerCast</a></li>
           <li><a href="http://blogs.twoplustwo.com/">Poker Blog</a></li>
         </ul>
       </div>
@@ -212,15 +212,24 @@
   <ul id="MenuBar2" class="MenuBarVertical">
     <li><a class="MenuBarItemSubmenu" href="http://www.twoplustwo.com/poker-bonus/pacific-poker/">888
         Pacfic Poker Bonus</a> </li>
+    <li><a class="MenuBarItemSubmenu" href="http://www.twoplustwo.com/poker-bonus/betfair/">Betfair
+    Poker Bonus</a></li>
+    <li><a class="MenuBarItemSubmenu" href="http://www.twoplustwo.com/poker-bonus/bwin/">bwin
+    Poker Bonus</a></li>
     <li><a class="MenuBarItemSubmenu" href="http://www.twoplustwo.com/poker-bonus/everest-poker/">Everest
-        Poker Bonus</a> </li>
+      Poker Bonus</a> </li>
+    <li><a class="MenuBarItemSubmenu" href="http://www.twoplustwo.com/poker-bonus/pkr/">PKR Bonus</a> </li>
+    <li><a class="MenuBarItemSubmenu" href="http://www.twoplustwo.com/poker-bonus/pokertime/">Poker Time Bonus</a> </li>
     <li><a class="MenuBarItemSubmenu" href="http://www.twoplustwo.com/poker-bonus/paddy-power-poker/">Paddy
         Poker Bonus</a> </li>
     <li><a class="MenuBarItemSubmenu" href="http://www.twoplustwo.com/poker-bonus/party-poker/">Party
         Poker Bonus</a></li>
+    <li><a class="MenuBarItemSubmenu" href="http://www.twoplustwo.com/poker-bonus/titan/">Titan
+        Poker Bonus</a></li>
     <li><a class="MenuBarItemSubmenu" href="http://www.twoplustwo.com/poker-bonus/FAQ.php">Bonus
         FAQ</a></li>
-  </ul><img src="http://www.twoplustwo.com/images/left_bottom.jpg" alt="poker Forums" width="211" height="8"><div style="background-image:none; height: 10px; background-color:#000"> &nbsp;</div><img src="/images/left_top.jpg" alt="left top"><ul id="MenuBar2" class="MenuBarVertical">
+  </ul>
+<img src="http://www.twoplustwo.com/images/left_bottom.jpg" alt="poker Forums" width="211" height="8"><div style="background-image:none; height: 10px; background-color:#000"> &nbsp;</div><img src="/images/left_top.jpg" alt="left top"><ul id="MenuBar2" class="MenuBarVertical">
         <li><a class="MenuBarItemSubmenu" href="http://www.twoplustwo.com/books/authors/">Poker
             Authors</a></li><li><a class="MenuBarItemSubmenu" href="http://www.twoplustwostore.com/twoplustwo/">Two Plus
             Two Store</a></li><li><a class="MenuBarItemSubmenu" href="http://www.twoplustwo.com/acronyms.php">Poker
@@ -238,12 +247,12 @@
       <ul class="noprint">
         <li><a href="http://www.twoplustwo.com/">Poker Strategy</a></li>
         <li><a href="http://www.twoplustwo.com/privacy.php" rel="nofollow">Privacy</a></li>
-        <li><a href="http://www.twoplustwo.com/contact/?action=admin">Feedback</a><a href="http://www.twoplustwo.com/magazine/current/"></a></li>
+        <li><a href="http://www.twoplustwo.com/contact/">Feedback</a></li>
         <li><a href="http://www.twoplustwo.com/terms.php" rel="nofollow">Terms</a></li>
         <li><a href="http://www.twoplustwo.com/about/">About Us </a></li>
         <li><a href="http://www.twoplustwo.com/sitemap.html">Sitemap </a></li>
       </ul>
-      <p>Copyright © 2009, Two Plus Two Interactive</p>
+      <p>Copyright © 2008&nbsp;-&nbsp;2010, Two Plus Two Interactive</p>
     </div>
   </div>
 </div>
